--- a/edge-modules/edge-dashboard/Cargo.toml
+++ b/edge-modules/edge-dashboard/Cargo.toml
@@ -5,14 +5,16 @@ authors = ["Azure IoT Edge Devs"]
 edition = "2018"
 
 [dependencies]
-actix-web = "1.0"
+actix-web = { version="1.0", features=["ssl"] }
 dirs = "2.0.1"
 failure = "0.1"
 futures = "0.1.25"
 os_info = "1.1.1"
+reqwest = "0.9.18"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+openssl = { version="0.10" }
 structopt = "0.2.16"
 url = "1.7.2"
 yaml-rust = "0.4"
@@ -21,4 +23,5 @@ edgelet-core = { path = "../../edgelet/edgelet-core" }
 edgelet-config = { path = "../../edgelet/edgelet-config" }
 edgelet-docker = { path = "../../edgelet/edgelet-docker" }
 edgelet-http-mgmt = { path = "../../edgelet/edgelet-http-mgmt" }
+iotedge = { path = "../../edgelet/iotedge" }
 management = { path = "../../edgelet/management" }
