--- a/edge-modules/edge-dashboard/Cargo.toml
+++ b/edge-modules/edge-dashboard/Cargo.toml
@@ -13,6 +13,7 @@ failure = "0.1"
 futures = "0.1.25"
 native-tls = "0.2"
 os_info = "1.1.1"
+rand = "0.7"
 reqwest = "0.9.18"
 serde = "1.0"
 serde_derive = "1.0"
